refined api spec
